--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <title>Ta Te Ti</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Ta-Te-Ti</h1>
+    </header>
+    <div class="main-container">
+        <div class="message">Ayiyi</div>
+        <div class="game-board">
+            <div class="field" data-index="0"></div>
+            <div class="field" data-index="1"></div>
+            <div class="field" data-index="2"></div>
+            <div class="field" data-index="3"></div>
+            <div class="field" data-index="4"></div>
+            <div class="field" data-index="5"></div>
+            <div class="field" data-index="6"></div>
+            <div class="field" data-index="7"></div>
+            <div class="field" data-index="8"></div>
+        </div>
+    </div>
 </body>
 </html>
