Logica de juego terminada

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Ta-Te-Ti</h1>
     </header>
     <div class="main-container">
-        <div class="message">Ayiyi</div>
+        <div class="message" id="message">Ayiyi</div>
         <div class="game-board">
             <div class="field" data-index="0"></div>
             <div class="field" data-index="1"></div>
@@ -25,6 +25,7 @@
             <div class="field" data-index="7"></div>
             <div class="field" data-index="8"></div>
         </div>
+        <button class="restart-button" id="restart-button">Reiniciar</button>
     </div>
 </body>
 </html>
