--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <h1>Ta-Te-Ti</h1>
     </header>
     <div class="main-container">
-        <div class="message" id="message">Ayiyi</div>
+        <div class="github"><a href="https://github.com/LaVieja1">Santiago Cano 2023</a></div>
+        <div class="message" id="message">Turno de X</div>
         <div class="game-board">
             <div class="field" data-index="0"></div>
             <div class="field" data-index="1"></div>
